MobX writePolicy: ReactiveWritePolicy.never

--- a/web_client/web/styles.css
+++ b/web_client/web/styles.css
@@ -12,3 +12,15 @@ html, body {
   padding: 20px;
   text-align: center;
 }
+
+button {
+  padding: 5px;
+}
+
+input {
+  padding: 5px;
+}
+
+select {
+  padding: 5px;
+}
